--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <head>
       <title>Perpustakaan Gen Z</title>
+      <link rel="stylesheet" href="index.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
@@ -137,7 +138,7 @@
     </div>
     <div class="card-deck">
       <div class="card">
-          <img class="card-img-top" src="/home/abidun/project/Latihan_SMA37/img/Teknologi informasi.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="/home/abidun/project/Perpustakaan_online/img/Teknologi informasi.jpeg" alt="Card image cap">
           <div class="card-body">
               <h5 class="card-title">Ensiklopedia Mini: Teknologi Informasi</h5>
               <p class="card-text"><small class="text-muted">Aminuddin</small></p>
@@ -150,7 +151,7 @@
           </div>
       </div>
       <div class="card">
-          <img class="card-img-top" src="/home/abidun/project/Latihan_SMA37/img/Roadmap Broadband.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="/home/abidun/project/Perpustakaan_online/img/Roadmap Broadband.jpeg" alt="Card image cap">
           <div class="card-body">
               <h5 class="card-title">Roadmap Broadband: Indonesia Menuju Era Teknologi</h5>
               <p class="card-text"><small class="text-muted">Denny Kusuma Hendraningrat dan Denny Setiawan</small></p>
