--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
     <div class="card-deck">
       <div class="card">
-          <img class="card-img-top" src="https://www.google.com/imgres?q=cover%20buku%20teknologi&imgurl=https%3A%2F%2Febooks.gramedia.com%2Febook-covers%2F65291%2Fimage_highres%2FBLK_EMTI2021185863.jpg&imgrefurl=https%3A%2F%2Febooks.gramedia.com%2Fid%2Fbuku%2Fensiklopedia-mini-teknologi-informasi&docid=APl-ycnPbujYFM&tbnid=RYrRsPjpfGURtM&vet=12ahUKEwjPtJPms-WHAxUHxzgGHUwIN0QQM3oECFUQAA..i&w=760&h=1092&hcb=2&ved=2ahUKEwjPtJPms-WHAxUHxzgGHUwIN0QQM3oECFUQAA" alt="Card image cap">
+          <img class="card-img-top" src="/home/abidun/project/Perpustakaan_online/img/Teknologi informasi.jpeg" alt="Card image cap">
           <div class="card-body">
               <h5 class="card-title">Ensiklopedia Mini: Teknologi Informasi</h5>
               <p class="card-text"><small class="text-muted">Aminuddin</small></p>
