--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
         .header {
             font-family: serif;
             color: #f1f1f1;
-            background-image: url("latar_buku.jpeg");
+            background-image: url("/home/abidun/project/Perpustakaan_online/img/latar_buku.jpeg");
         }
 
 
@@ -101,7 +101,7 @@
 
         <form action="index.html" method="post">
             <div class="imgcontainer">
-                <img src="latar_buku.jpeg" alt="avatar" class="avatar">
+                <img src="/home/abidun/project/Perpustakaan_online/img/latar_buku.jpeg" alt="avatar" class="avatar">
             </div>
 
             <div class="conatiner">
