--- a/signup.html
+++ b/signup.html
@@ -93,7 +93,7 @@
   }
 
   .header {
-    background-image: url("latar_buku.jpeg");
+    background-image: url("/home/abidun/project/Perpustakaan_online/img/latar_buku.jpeg");
     color: #f1f1f1;
   }
 </style>
@@ -110,7 +110,7 @@
         <p>Silakan isi formulir ini untuk membuat akun.</p>
       </div>
       <div class="imgcontainer">
-      <img src="gambar_avatar.png" alt="avatar" class="avatar">
+      <img src="/home/abidun/project/Perpustakaan_online/gambar_avatar.png" alt="avatar" class="avatar">
       </div>
       <hr>
 
