--- a/teknologi.html
+++ b/teknologi.html
@@ -80,7 +80,7 @@
    .header {
     color: white;
     background-color: #ddd;
-    background-image: url("/home/abidun/project/Perpustakaan_online/latar_buku.jpeg");
+    background-image: url("/home/abidun/project/Perpustakaan_online/img/latar_buku.jpeg");
     font-family: fantasy;
     padding: 20px;
     text-align: center;
@@ -103,14 +103,15 @@
   }
 
   #logout {
-    color: #f2f2f2;
+    color: #000;
     float: right;
 
   }
 
   .active {
-    background-color: #04AA6D;
+    background-color: #f2f2f2;
   }
+
   </style>
 
   <body>
@@ -127,7 +128,12 @@
       <a class="active" id="logout" target="" href="login.html" style="position: relative;">Logout</a>
     </div>
 
-    <h2>Buku Teknologi</h2>
+    <br>
+    <div class="container">
+      <div class="container"><h5 class="pb-3 font-italic border-bottom">Buku Teknologi</h5></div>
+
+
+    </div>
 
     
 
