--- a/komik.html
+++ b/komik.html
@@ -80,7 +80,7 @@
    .header {
     color: white;
     background-color: #ddd;
-    background-image: url("/home/abidun/project/Perpustakaan_online/latar_buku.jpeg");
+    background-image: url("/home/abidun/project/Perpustakaan_online/img/latar_buku.jpeg");
     font-family: fantasy;
     padding: 20px;
     text-align: center;
@@ -103,13 +103,13 @@
   }
 
   #logout {
-    color: #f2f2f2;
+    color: #000;
     float: right;
 
   }
 
   .active {
-    background-color: #04AA6D;
+    background-color: #f2f2f2;
   }
 
         
